--- a/style.css
+++ b/style.css
@@ -1,13 +1,31 @@
-body {
-    background-color: gray;
-  }
-  
-
-a {
-    color: orange;
-    text-align: center;
-  }
-li {
-    color: lightgray;
+html{
+  font-family: sans-serif
 }
+
+body {
   
+  margin: 50px;
+}
+
+span {
+  font-family: monospace;
+  background-color: rgb(217, 235, 229)
+}
+
+.note {
+  font-style: italic
+}
+
+table, td, th {  
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+table {
+  border-collapse: collapse;
+  width: 30%;
+}
+
+th, td {
+  padding: 10px;
+}
